Fix scroll overflow issue.

--- a/apps/fluster/src/styles/global.scss
+++ b/apps/fluster/src/styles/global.scss
@@ -20,6 +20,10 @@ html {
   overscroll-behavior-block: none;
 }
 
+body {
+  overflow: hidden;
+}
+
 #root {
   height: 100vh;
   width: 100vw;
@@ -170,3 +174,4 @@ html {
 /*         background-color: #0f0f0f69; */
 /*     } */
 /* } */
+
